# TetrisWithSDLCPP

./: CMakeLists.txt  README.MD  main.cpp
lib/: CMakeLists.txt
lib/include/: Board.h  Defines.h  Game.h  Tertomino.h
lib/src/: Board.cpp  Game.cpp  Tetromino.cpp
